# Gesturify

./: LICENSE  README.md  gesturify.html  main.py  pyproject.toml  setup_env.py
